fix: update button to allow table header to set alignment through tokens (#3072)
fixes https://github.com/nl-design-system/utrecht/issues/3071

--- a/components/button/src/_mixin.scss
+++ b/components/button/src/_mixin.scss
@@ -228,7 +228,7 @@
   font-size: var(--_utrecht-button-font-size, var(--utrecht-document-font-family, inherit));
   font-weight: var(--_utrecht-button-appearance-font-weight, var(--utrecht-button-font-weight));
   inline-size: var(--utrecht-button-inline-size, auto);
-  justify-content: center;
+  justify-content: var(--utrecht-button-justify-content, center);
   line-height: var(--_utrecht-button-line-height);
   max-inline-size: var(--utrecht-button-max-inline-size, fit-content);
   min-block-size: var(--utrecht-button-min-block-size, 44px);
